2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap/Makefile.try: Adjust.
	* lib/savedir.c: Avoid using stpcpy, so that bootstrapping does not
	need it.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Slightly modernize.
	* Makefile.am: Modernize, use dependencies.
	* Makefile.am: Modernize, use dependencies.
	* lib/Makefile.am: Remove ansi2knr.
	* src/Makefile.am: Remove ansi2knr.

	* .gitignore: Add INSTALL
	* build-aux/.gitignore: New.

2009-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* autogen.sh: Remove what is useless with git.

2009-02-10  Tony Abou-Assaleh <taa@acm.org>

	* po/*.po: update from the Translation Project

	* configure.ac.in: update version to 2.6-cvs

2009-02-02  Karl Berry  <karl@tug.org>

	* configure.ac.in (pcre): set CPPFLAGS, not CFLAGS.

2009-02-01  Tony Abou-Assaleh <taa@acm.org>

	* po/*.po: update from the Translation Project

	* po/Makefile.in.in: Remove deleted file ChangeLog from DISTFILES

	* configure.ac.in: Replace obsolete macro AC_OUTPUT with modern equivalent

2009-02-01  Karl Berry  <karl@tug.org>

	* missing: re-add (from gnulib), since it's missing.

	* src/grep.c (usage): consistent punctuation.

2009-01-31  Tony Abou-Assaleh <taa@acm.org>

	* m4/*.m4: quote underquoted definitions
	* m4/codeset.m4: serial AM1 -> serial 1
	* m4/iconv.m4: serial AM2 -> serial 2
	* m4/header.m4: m4_regexp -> m4_bregexp, m4_patsubst -> m4_bpatsubst

2009-01-29  Karl Berry  <karl@gnu.org>

	* src/grep.c (usage): mention gnu.org/s/grep and gnu.org/gethelp.

        Update and/or add copyright notices:
        * ABOUT-NLS
        * AUTHORS
        * ChangeLog
        * Makefile.am
        * NEWS
        * README
        * README-alpha
        * README.DOS
        * THANKS
        * autogen.sh
        * configure.ac.in
        * bootstrap/Makefile.am
        * bootstrap/Makefile.try
        * bootstrap/README
        * doc/Makefile.am
        * doc/grep.texi
        * lib/Makefile.am
        * m4/Makefile.am