@@ -55,8 +55,7 @@ jm_AC_TYPE_UINTMAX_T
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(string.h stdlib.h sys/param.h memory.h unistd.h libintl.h)
-AC_CHECK_HEADERS(wctype.h wchar.h)
+AC_CHECK_HEADERS(stddef.h string.h stdlib.h sys/param.h memory.h unistd.h locale.h limits.h wctype.h wchar.h)
 AC_HEADER_DIRENT
 AC_HEADER_STAT
 
@@ -66,7 +65,7 @@ AC_FUNC_CLOSEDIR_VOID
 AC_FUNC_MMAP
 
 dnl getpagesize is checked for by AC_FUNC_MMAP.
-AC_CHECK_FUNCS(btowc isascii iswctype mbrlen memmove setmode strerror wcrtomb wcscoll wctype)
+AC_CHECK_FUNCS(btowc isascii iswctype mbrlen memmove mempcpy setlocale setmode strerror wcrtomb wcscoll wctype)
 # We can use mbrtowc only if we have mbstate_t.
 AC_FUNC_MBRTOWC
 # Yet we need a mbstate_t stub in every case.
