@@ -1,5 +1,10 @@
 2009-11-20  Paolo Bonzini  <bonzini@gnu.org>
 
+	* configure.ac.in: Test for limits.h, locale.h, stddef.h, mempcpy
+	and setlocale, though already done implicitly via AM_GNU_GETTEXT.
+
+2009-11-20  Paolo Bonzini  <bonzini@gnu.org>
+
 	* bootstrap/Makefile.try: Adjust.
 	* lib/savedir.c: Avoid using stpcpy, so that bootstrapping does not
 	need it.
